// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`register user endpoint; can register a new user: create app user 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "emailAddress": "TestUsername",
        "passwordHash": "testHashedPassword",
      },
    ],
  ],
}
`;

exports[`register user endpoint; can register a new user: send status 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      201,
    ],
  ],
}
`;
